fix: More readable text color

--- a/src/app/landing/home/home.component.scss
+++ b/src/app/landing/home/home.component.scss
@@ -119,7 +119,7 @@
     margin: 0 auto;
 
     h2 {
-      color: #bfc6dc;
+      color: #d9e2ff;
       text-align: center;
       margin-bottom: 4rem;
       font-size: 1.7rem;
